[package]
name = "dxsafe"
version = "0.4.3"
authors = ["red75prime <red75prim@gmail.com>"]

[lib]
name = "dxsafe"

[dependencies]
libc = "0.2"
#winapi = "0.2"
#winapi-build = "0.1"
#dxguid-sys = "0.2"

[dependencies.winapi]
git = "https://github.com/red75prime/winapi-rs"
branch = "D2D1_IIDs"

[dependencies.dxguid-sys]
git = "https://github.com/red75prime/winapi-rs"
branch = "D2D1_IIDs"
